--- a/broker-back-end/src/main/docker/Dockerfile.native-distroless
+++ b/broker-back-end/src/main/docker/Dockerfile.native-distroless
@@ -1,23 +1,37 @@
-####
-# This Dockerfile is used in order to build a distroless container that runs the Quarkus application in native (no JVM) mode
-#
-# Before building the container image run:
-#
-# ./mvnw package -Pnative
-#
-# Then, build the image with:
-#
-# docker build -f src/main/docker/Dockerfile.native-distroless -t quarkus/broker-back-end .
-#
-# Then run the container using:
-#
-# docker run -i --rm -p 8080:8080 quarkus/broker-back-end
-#
-###
-FROM quay.io/quarkus/quarkus-distroless-image:1.0
-COPY target/*-runner /application
+# syntax=docker/dockerfile:1
+
+# Stage 1: Build
+FROM quay.io/quarkus/ubi-quarkus-mandrel-builder-image:23.1-jdk-21 AS build
+USER root
+WORKDIR /app
+
+COPY mvnw .
+COPY .mvn .mvn
+RUN chmod +x mvnw
+
+COPY pom.xml .
+COPY broker-back-end/pom.xml broker-back-end/
+COPY exchange-back-end/pom.xml exchange-back-end/
+COPY native-stub/pom.xml native-stub/
+
+RUN ./mvnw dependency:go-offline -pl broker-back-end -am -B
+
+COPY broker-back-end/src broker-back-end/src
+COPY native-stub/src native-stub/src
+
+RUN ./mvnw package -Pnative -pl broker-back-end -am -DskipTests \
+    -Dquarkus.native.native-image-xmx=4g \
+    -Dquarkus.package.output-name=broker \
+    -Dquarkus.native.additional-build-args=--initialize-at-run-time=org.apache.mina.proxy.handlers.http.digest.HttpDigestAuthLogicHandler
+
+# Stage 2: Runtime
+FROM quay.io/quarkus/quarkus-distroless-image:2.0
+WORKDIR /work/
+
+COPY --chown=nonroot:nonroot --from=build /app/broker-back-end/target/broker-runner /work/application
 
 EXPOSE 8080
+
 USER nonroot
 
 CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
